# anki-stepler

./: .gitignore  Leben_in_Deutschland_A2.txt  README.md  anki_deck_generator.py  generate_linie1b12.py  pyproject.toml  test.txt
.devcontainer/: Dockerfile  devcontainer.json
linie1B12/: 09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  unregelmaessige_verben.txt
